K8sManifests/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: springcrud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-k8s-mysql
                port:
                  number: 8080
